[gd_scene load_steps=7 format=1]

[ext_resource path="res://scenes/town_1/tilesets/house_1.scn" type="PackedScene" id=1]
[ext_resource path="res://scripts/town_1/house_1.gd" type="Script" id=2]
[ext_resource path="res://scripts/grid.gd" type="Script" id=3]
[ext_resource path="res://scenes/character.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/town_1/npc_1.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/teleport.tscn" type="PackedScene" id=6]

[node name="house_1" instance=ExtResource( 1 )]

script/script = ExtResource( 2 )
name = "town_1/house_1"

[node name="characters_grid" type="TileMap" parent="."]

mode = 0
tile_set = null
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )
script/script = ExtResource( 3 )

[node name="characters" type="YSort" parent="characters_grid"]

sort/enabled = true

[node name="main_char" parent="characters_grid/characters" instance=ExtResource( 4 )]

transform/pos = Vector2( 64, 576 )

[node name="npc1" parent="characters_grid/characters" instance=ExtResource( 5 )]

transform/pos = Vector2( 80, 399 )

[node name="teleport" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( 64, 624 )
scene_to = "town_1/house_1"

[node name="CanvasModulate" type="CanvasModulate" parent="."]

color = Color( 1, 1, 1, 1 )


